before upgrading to angular 4.4.4

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
         center: new google.maps.LatLng(14.5994, -45.6731), // New York
         // disableDefaultUI: true,
 
-        zoomControl: false,
+        zoomControl: true,
         mapTypeControl: false,
-        scaleControl: false,
+        scaleControl: true,
         streetViewControl: false,
         rotateControl: false,
         fullscreenControl: false,
